agrega fotos a card y ultimando detalles

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
       <!-- PROJECTS -->
       <section class="projects-cards" id="mi_projects">
         <div class="card">
-          <img src="img/pexels-photo-1516680-removebg-preview.png" alt="" />
+          <img src="img/card-paso.jpg" alt="" />
           <div class="right-column">
-            <p class="project-name">Simulador Elecciones Paso</p>
+            <p class="project-name">Simulador Elecciones PASO</p>
             <p class="project-tech-used">Tecnologias: <span>Java</span></p>
             <p class="project-desc">Proyecto final para la materia de POO de la carrera Lic en Sistemas. La finalidad de este proyecto era crear una simulacion del sistema de votos para las elecciones PASO.</p>
             <div class="projects-links">
@@ -104,13 +104,13 @@
         </div>
 
         <div class="card">
-          <img src="img/pexels-photo-1516680-removebg-preview.png" alt="" />
+          <img src="img/card-parque.jpg" alt="" />
           <div class="right-column">
             <p class="project-name">Parque de Atracciones</p>
             <p class="project-tech-used">Tecnologias: <span>Java - SQLite</span></p>
-            <p class="project-desc">Proyecto final para el curso de Argentina Programa. El objetivo del proyecto era cualquier usuario pueda loguearse y comprar entradas, ver inventario, etc.</p>
+            <p class="project-desc">Proyecto final para el curso de Argentina Programa. El objetivo del proyecto era que cualquier usuario pueda loguearse y comprar entradas, ver inventario, etc.</p>
             <div class="projects-links">
-              <a href="https://github.com/TallerPoo2021/EleccionesPASO2021" class="btn-oval" target="_blank">Repo <i class="fab fa-github"></i></a>
+              <a href="https://github.com/TurismoEnLaTierraMedia/NotNull_TP" class="btn-oval" target="_blank">Repo <i class="fab fa-github"></i></a>
             </div>
           </div>
         </div>
