arregla formulario para netlify

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <section class="contact" id="mi_contact">
         <div class="section-form">
           <p class="contact-tittle">Contáctame</p>
-          <form class="form" name="contacto" netlify>
+          <form class="form" name="contacto" method="POST" data-netlify="true">
             <input class="form-name" type="text" placeholder="Nombre" />
             <input class="form-email" type="email" placeholder="Email" />
             <textarea placeholder="Ingrese su mensaje aqui"></textarea>
